[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal_adjuster"
dynamic = ["dependencies"]
version = "1.1.0"
description = "Adjusters are a key tool for modifying temporal objects. They exist to externalize the process of adjustment, permitting different approaches, as per the strategy design pattern. Temporal Adjuster provides tools that help pinpoint very specific moments in time, without having to manually count days, weeks, or months."
requires-python = ">= 3.3"
authors = [
  {name = "Gabriel Mitelman Tkacz", email = "gmtkacz@proton.me"},
]
maintainers = [
  {name = "Gabriel Mitelman Tkacz", email = "gmtkacz@proton.me"},
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["date", "time", "datetime", "adjuster", "adjustment", "temporal"]
classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Operating System :: OS Independent",
  "Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/gtkacz/temporal_adjusters_py.git"
Issues = "https://github.com/gtkacz/temporal_adjusters_py/issues"
